--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
-       <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
 		<!-- Jquery -->
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
@@ -442,7 +442,7 @@
         <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="col-12">
             <img id="paper" src="img/paper.png">
-            <!-- <div class="data" id="midcol-3">
+            <div class="data" id="midcol-3">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali"
@@ -478,7 +478,7 @@
         <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
             <h2>Get ready for take off!</h2>
-            <!-- <div class="data" id="midcol-4">
+            <div class="data" id="midcol-4">
                 <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Ali"
@@ -505,8 +505,8 @@
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed--
-            </div><!--midcol closed-->
+                </div><!--gallery block closed -->
+            </div><!--midcol closed -->
         </div> <!-- end col-11 -->
         </div>
 	
