--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="col-12">
             <img id="paper" src="img/paper.png">
             <div class="data" id="midcol-3">
-                <div id="gallery-block">
+                <!-- <div id="gallery-block">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali"
                                     title="Ali"><img class="hid" src="../orris0/bda-10.jpg" alt=""></a></li>
