--- a/index.html
+++ b/index.html
@@ -180,15 +180,22 @@
                 <header class="data" id="gallerypageheader"><!-- <div id="hdr"> changed to <header> -->
                     <div class="data" id="html5style2banner">
                         <h1>StarTrackr!</h1>
+						<nav>
+                    <ul class="data" id="main-menu">
+                        <li><a href="about.html" title="">About Us</a></li>
+                        <li><a href="news.html" title="">News</a></li>
+                        <li><a href="events.html" title="">Events</a></li>
+                        <li><a href="volunteers.html" title="">Volunteers</a></li>
+                        <li><a href="services.html" title="">Services</a></li>
+                        <li><a href="membership.html" title="">Membership</a></li>
+                        <li><a href="index2.html" title="">Home</a></li>
+                    </ul>
+                </nav>
                     </div>
                 </header>
 				<br class="clear">
             </div> <!-- end col-12 -->            
-        </div>
-        <!-- end row -->
-       
-		
-		
+        </div><!-- end row -->	
 		
 		<div class="row">
             <div class="col-12">
@@ -196,39 +203,9 @@
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
-        <div class="col-12">
-            <img id="paper" src="img/paper.png">
-            <div class="data" id="midcol-3">
-                <!-- <div id="gallery-block">
-                    <ul id="col-1">
-                        <li><a href="#"><img src="../orris0/bda-10.jpg" width="70" height="103" alt="Ali"
-                                    title="Ali"><img class="hid" src="../orris0/bda-10.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-11.jpg" width="70" height="103" alt="Cat"
-                                    title="Cat"><img class="hid" src="../orris0/bda-11.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-12.jpg" width="70" height="103" alt="Beach"
-                                    title="Beach"><img class="hid" src="../orriso/bda-12.jpg" alt=""></a></li>
-                    </ul>
-                    <ul id="col-2">
-                        <li><a href="#"><img src="../orris0/bda-13.jpg" width="70" height="103" alt="Ferns"
-                                    title="Ferns"><img class="hid" src="../orriso/bda-13.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-14.jpg" width="70" height="103" alt="Nico"
-                                    title="Nico"><img class="hid" src="../orriso/bda-14.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-15.jpg" width="70" height="103" alt="Child and Beach"
-                                    title="Child and Beach"><img class="hid" src="../orriso/bda-15.jpg" alt=""></a>
-                        </li>
-                    </ul>
-                    <ul id="col-3">
-                        <li><a href="#"><img src="../orris0/bda-16.jpg" width="70" height="103" alt="Ancient and modern"
-                                    title="Ancient and Modern"><img class="hid" src="../orriso/bda-16.jpg" alt=""></a>
-                        </li>
-                        <li><a href="#"><img src="../orris0/bda-17.jpg" width="70" height="103" alt="Felix"
-                                    title="Felix"><img class="hid" src="../orriso/bda-17.jpg" alt=""></a></li>
-                        <li><a href="#"><img src="../orris0/bda-18.jpg" width="70" height="103" alt="Cliffs"
-                                    title="Cliffs"><img class="hid" src="../orriso/bda-18.jpg" alt=""></a></li>
-                    </ul><br class="clear">
-                </div><!--gallery block closed-->
-            </div><!--midcol closed-->
-        </div>
+            <div class="col-12">
+                <img id="paper" src="img/paper.png">
+            </div>
         </div>
         <br class="clear">
         
@@ -1275,7 +1252,7 @@
                         Okay, cool, perhaps you'll prefer this <a href="no-js.html">non-JavaScript version</a> of the page.
                     </p>
                 </noscript>
-            </header><!-- end-header -->
+            </header><!-- end-header --
             <br class="clear">
         <div class="col-12"> <!-- close top section - content area starts -->
                     <div id="hnav">
@@ -1620,7 +1597,8 @@
             <!-- ======= Hero Section ======= -->
             <section class="data" id="hero" class="d-flex align-items-center scrolled-offset">
                 <div class="container position-relative aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-                    <div data-role="header" class="header first" id="container" id="header" class="d-flex align-items-center fixed-top">u                        <h2>Lets achieve our goals.</h2>
+                    <div data-role="header" class="header first" id="container" id="header" class="d-flex align-items-center fixed-top">u                        
+						<h2>Lets achieve our goals.</h2>
                         <p>
                             We fight for your rights.
                         </p>
