--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
         </div>
         </div>
-		-->
+		--
         
 
         <div class="row" style="background-color: #F6931E;">
@@ -485,9 +485,9 @@
                         <li><a href="#"><img src="../orris0/bda-9.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="../orris0/bda-9.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed -->
-            </div><!--midcol closed -->
-        </div> <!-- end col-11 -->
+                </div><!--gallery block closed --
+            </div><!--midcol closed --
+        </div> <!-- end col-11 --
         </div>
 	
         <div class="col-3">
@@ -520,8 +520,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
-            </div><!--midcol closed-->
+                </div><!--gallery block closed--
+            </div><!--midcol closed--
         </div>
         <div class="row" style="background-color: #1ABC9C;">
         <div class="col-11">
@@ -554,8 +554,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
-            </div><!--midcol closed -->
+                </div><!--gallery block closed--
+            </div><!--midcol closed --
         </div>
         <div class="col-3">
             <img id="orange-globe" src="img/orange-globe.png">
@@ -587,8 +587,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" vwidth="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
-            </div><!--midcol closed -->
+                </div><!--gallery block closed--
+            </div><!--midcol closed --
         </div>
         </div>
         <div class="row" style="background-color: #E5EF3F;">
@@ -622,8 +622,8 @@
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Cliffs"
                                     title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
                     </ul><br class="clear">
-                </div><!--gallery block closed-->
-        </div><!--end col-11 -->
+                </div><!--gallery block closed--
+        </div><!--end col-11 --
         <div class="col-3">
             <img id="waves" src="img/waves.png">
         </div>
@@ -916,7 +916,7 @@
                 </div>
 
             </div>
-
+</div>
             <section id="unsubscribe" class="unsubscribe-form content-section text-center">
                 <div class="block text-center">
                     <div class="container">
@@ -1254,7 +1254,7 @@
                 </noscript>
             </header><!-- end-header --
             <br class="clear">
-        <div class="col-12"> <!-- close top section - content area starts -->
+        <div class="col-12"> <!-- close top section - content area starts --
                     <div id="hnav">
                 <ul>
                     <li><a class="active" href="index2.html/">Home Page</a></li>
@@ -1264,7 +1264,7 @@
                     <li><a href="./page5.html">Page Five</a></li>
                 </ul>
             </div>
-            </div><!-- end col-12 -->
+            </div><!-- end col-12 --
             <div id="content">
                 <b>A full page roll-over gallery of greetings cards</b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>          
@@ -1276,10 +1276,10 @@
                             <li class="btn"><a href="pagethree.html">Buy Now!</a></li>
                             <li class="btn"><a href="pagefour.html">About Us</a></li>
                             <li class="btn"><a href="Homepage.html">Gift Ideas</a></li>
-                        </ul><!-- end-ul -->
-                    </menu><!-- end-nav -->
+                        </ul><!-- end-ul --
+                    </menu><!-- end-nav --
                </div>
-                <!-- RIGHT-COL -->
+                <!-- RIGHT-COL --
                 <div id="rightcol">
                     <h2 class="dark">StarTrackr!</h2>
                     <a href="./creating-a-website.html" class="btn-get-started scrollto">get started</a>
@@ -1291,11 +1291,11 @@
                     </p>
                     <br class="clear">
                     <p class="advert">Web Design by <br> Orris Baker</p>
-                </div> <!-- end right-col -->
+                </div> <!-- end right-col --
                 <div class="row">
                     <div class="col-12">
                         <img src="images/kite.png" width="95%" ;>
-                    </div><!-- end col-12 -->
+                    </div><!-- end col-12 --
                     <div id="midcol">
                         <div id="gallery-block">
                             <ul id="col-1">
@@ -1314,9 +1314,9 @@
                                 <li><a href="#"><img src="./9landscape.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
                             </ul>
                             <br class="clear">
-                        </div><!--gallery block closed-->
-                    </div><!--midcol closed-->
-                </div><!-- end col-12 -->
+                        </div><!--gallery block closed--
+                    </div><!--midcol closed--
+                </div><!-- end col-12 --
                 <div class="row">
                     <div class="col-12" style="padding: 2%;">
                         <div id="banner">
@@ -1325,14 +1325,14 @@
                                 </h2>
                             </div>
                         </div>
-                    </div><!-- end col-12 -->
-                </div> <!-- end class row -->
+                    </div><!-- end col-12 --
+                </div> <!-- end class row --
                 <div class="row" style="background-color: #3c8BB6; padding: 5% 0 3%;">
                     <div class="col-12">
                         <img src="images/paper.png" width="95%" ;>
 
-                    </div><!-- end col-12 -->
-                </div> <!-- end class row -->
+                    </div><!-- end col-12 --
+                </div> <!-- end class row --
                 <footer>
                 <!-- Footer goes here -->
             <div id="container">
