--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
 		<!-- Core theme CSS (includes Bootstrap)--
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
-        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css"> -->
+        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css"> --
 		 <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css">
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
 		<!-- Jquery -->
-		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/style.css" type="text/css">
+		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/flexboxgrid.css" type="text/css">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="../../orris0/orris0/js/scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../../orris0/CSS/HTML5-style-2.css">
