--- a/index.html
+++ b/index.html
@@ -258,103 +258,68 @@
             </nav>
             <br class="clear">
             <div class="data" id="gallerypagerightcol">
-                       <h4> StarTrackr</h4><br><br>
-                        <p><a href="http://validator.w3.org/check?uri=referer">
-                                <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                                    alt="Validated HTML5" title="Validated HTML5"></a>
-                        </p>
-                        <p>
-                            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88"
-                                    height="31" title="Valid CSS!" alt="Valid CSS!"></a>
-                            <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
-                        </p>
-                        <br class="clear">
-                        <p class="advert">Web Design by Orris Baker</p>
-                    </div>
-                    <div class="data" id="gallerypagemidcol">
-                        <div class="data" id="gallerypagegallery-block">
-                            <ul id="col-1">
-                                <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
-                            </ul>
-                            <ul id="col-2">
-                                <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img
-                                            class="hid" src="images/fernsbig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid"
-                                            src="images/nicobig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach"
-                                            title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg"
-                                            alt=""></a></li>
-                            </ul>
-                            <ul id="col-3">
-                                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
-                                            title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img
-                                            class="hid" src="images/felixbig.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img
-                                            class="hid" src="images/cliffbig.jpg" alt=""></a></li>
-                            </ul><br class="clear">
-                        </div><!--gallery block closed-->
-                    </div><!--midcol closed-->
+                <h4> StarTrackr</h4>
+				<br><br>
+                <p>
+					<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
+                </p>
+                <p>
+                    <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+                    <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+                </p>
+                <br class="clear">
+                <p class="advert">Web Design by Orris Baker</p>
+            </div>
+		    <br class="clear">
+            <div class="data" id="gallerypagemidcol">
+                <div class="data" id="gallerypagegallery-block">
+                    <ul id="col-1">
+                        <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                    </ul>
+                    <ul id="col-2">
+                        <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                    </ul>
+                    <ul id="col-3">
+                        <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+                    </ul><br class="clear">
+                </div><!--gallery block closed-->
+            </div><!--midcol closed-->
                     
-
-
-
-                    <nav class="data" id="gallerypagenav">
-                        <ul>
-                            <li class="btn"><a href="#">Page Two</a></li>
-                            <li class="btn"><a href="#">Page Three</a></li>
-                            <li class="btn"><a href="#">Page Four</a></li>
-                            <li class="btn"><a href="#">Home Page</a></li>
-                        </ul>
-                    </nav>
-
-                    <div id="gallerypagerightcol">
-                        Startrackr<br><br>
-                        <p><a href="https://validator.w3.org/check?uri=referer"><img
-                                    src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                                    alt="Validated HTML5" title="Validated HTML5"></a></p>
-                        <p><a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88"
-                                    height="31" title="Valid CSS!" alt="Valid CSS!"></a><span
-                                class="small"><br><br>Markup Validated by the
-                                World Wide Web Consortium</span></p>
-                        <br class="clear">
-                        <p class="advert">Web Design by <br> Orris Baker Jr</p>
-                    </div>
-                    <div class="data" id="gallerypagemidcol">
-                        <div class="midcol-block">
-                            <ul id="col-1">
-                                <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali"
-                                            title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../orris0/bda-1.jpg" width="70" height="103" alt="Cat"
-                                            title="Cat"><img class="hid" src="../orris0/bda-1.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../orris0/bda-2.jpg" width="70" height="103" alt="Beach"
-                                            title="Beach"><img class="hid" src="../orris0/bda-2.jpg" alt=""></a></li>
-                            </ul>
-                            <ul id="col-2">
-                                <li><a href="#"><img src="../orris0/bda-3.jpg" width="70" height="103" alt="Ferns"
-                                            title="Ferns"><img class="hid" src="../orris0/bda-3.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../orris0/bda-4.jpg" width="70" height="103" alt="Nico"
-                                            title="Nico"><img class="hid" src="../orris0/bda-4.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../orris0/bda-5.jpg" width="70" height="103"
-                                            alt="Child and Beach" title="Child and Beach"><img class="hid"
-                                            src="../orris0/bda-5.jpg" alt=""></a></li>
-                            </ul>
-                            <ul id="col-3">
-                                <li><a href="#"><img src="../orris0/bda-6.jpg" width="70" height="103"
-                                            alt="Ancient and modern" title="Ancient and Modern"><img class="hid"
-                                            src="../orris0/bda-6.jpg" alt=""></a>
-                                </li>
-                                <li><a href="#"><img src="../orris0/bda-7.jpg" width="70" height="103" alt="Felix"
-                                            title="Felix"><img class="hid" src="../orris0/bda-7.jpg" alt=""></a></li>
-                                <li><a href="#"><img src="../orris0/bda-8.jpg" width="70" height="103" alt="Cliffs"
-                                            title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
-                            </ul><br class="clear">
-                        </div><!--gallery block closed-->
-                    </div><!--midcol closed-->
-                    <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+            <nav class="data" id="gallerypagenav">
+                <ul>
+                    <li class="btn"><a href="#">Page Two</a></li>
+                    <li class="btn"><a href="#">Page Three</a></li>
+                    <li class="btn"><a href="#">Page Four</a></li>
+                    <li class="btn"><a href="#">Home Page</a></li>
+                </ul>
+            </nav>            
+            
+		    <div class="data" id="gallerypagemidcol">
+                <div class="midcol-block">
+                    <ul id="col-1">
+                        <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-1.jpg" width="70" height="103" alt="Cat" title="Cat"><img class="hid" src="../orris0/bda-1.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-2.jpg" width="70" height="103" alt="Beach" title="Beach"><img class="hid" src="../orris0/bda-2.jpg" alt=""></a></li>
+                    </ul>
+                    <ul id="col-2">
+                        <li><a href="#"><img src="../orris0/bda-3.jpg" width="70" height="103" alt="Ferns" title="Ferns"><img class="hid" src="../orris0/bda-3.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-4.jpg" width="70" height="103" alt="Nico" title="Nico"><img class="hid" src="../orris0/bda-4.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-5.jpg" width="70" height="103" alt="Child and Beach" title="Child and Beach"><img class="hid" src="../orris0/bda-5.jpg" alt=""></a></li>
+                    </ul>
+                    <ul id="col-3">
+                        <li><a href="#"><img src="../orris0/bda-6.jpg" width="70" height="103" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="../orris0/bda-6.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-7.jpg" width="70" height="103" alt="Felix" title="Felix"><img class="hid" src="../orris0/bda-7.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="../orris0/bda-8.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
+                    </ul><br class="clear">
+                </div><!--gallery block closed-->
+            </div><!--midcol closed-->
+            <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding: 2%;">
                             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
                         </div>
