--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -24,10 +24,14 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <!-- Core theme CSS (includes Bootstrap)--
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
-       <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+		-->
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css">
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
+        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <script type="text/javascript" src="../../orris0/orris0/js/jquery-1.7-min.js"></script>
