--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
 		
 		<div class="row">
             <div class="col-12">
-                <img id="kite" src="img/kite.png";>
+                <img src="img/kite.png";>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
         
 		<div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
             <div class="col-12">
-                <img id="paper" src="img/paper.png">
+                <img src="img/paper.png">
             </div>
         </div>
         <br class="clear">
