--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		-->
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src=".scripts.js"></script>
 
 		<!-- Jquery -->
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/style.css" type="text/css">
