--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 		-->
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src=".scripts.js"></script>
 
 		<!-- Jquery -->
-		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/style.css" type="text/css">
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css" type="text/css">
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/flexboxgrid.css" type="text/css">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
