--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/flexboxgrid.css" type="text/css">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="../../orris0/orris0/js/scripts.js"></script>
+        <script type="text/javascript" src=".scripts.js"></script>
         
         <!-- code.jquery.com/mobile-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
@@ -170,7 +170,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <script src=”http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js”></script>
         <script type=”text/javascript” src=”assets/js/ui.js”></script>
-        <script type="text/javascript" src="../js/script.js"></script>
+        <script type="text/javascript" src=".scripts.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <!--Add conditional Javascript-->
