--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -28,14 +28,14 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Core theme CSS (includes Bootstrap)--
+		<!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css"> --
-		 <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css">
-		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
+		 
+		
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
-		-->
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
+		
+		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src=".scripts.js"></script>
 
