--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -36,8 +36,8 @@
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 		
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src=".scripts.js"></script>
+        <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./scripts.js"></script>
 
 		<!-- Jquery -->
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css" type="text/css">
