--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css"> --
 		 
 		
-        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+       <!-- <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> -->
 		
 		<link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
