--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 		<!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
-        <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
+        <link rel="stylesheet" href="../../orris0/orris0/CSS/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 	
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script>
 
 		<!-- Jquery --
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
