--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
-		
         <title>Gallery-page-Templates</title>
-		
         <!--
-        The following 2 meta tags *must* come first in the <head>
-	        to consistently ensure proper document rendering.
-        Any other head element should come *after* these tags.
+        The following 2 meta tags *must* come first in the <head> to consistently ensure proper document rendering. Any other head element should come *after* these tags.
         -->
-        <!-- meta details go here -->
-
-        <!-- Set character encoding for the document -->
+        <!-- meta details go here -- Set character encoding for the document -->
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
 		<!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 	
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
-        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="/" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script>
 
-		<!-- Jquery --
+		<!-- Jquery -->
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css" type="text/css">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
