--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="/" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script>
+        <script type="text/javascript" src="../../orris0/scripts.js"></script>
 
 		<!-- Jquery -->
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
