--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Jquery -->
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="../orris0/CSS/flexboxgrid.css" type="text/css">
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>
         
         <!-- code.jquery.com/mobile-->
