--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
 	
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
-        <script src="/" type="text/javascript" charset="utf-8"></script>
+        <script src="../orris0/CSS/HTML5-style-2.css" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="../orris0/scripts.js"></script>
 
 		<!-- Jquery -->
