--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </ul>
             </nav>            
             
-		    <div class="data" id="gallerypagemidcol-2">
+		    <!-- <div class="data" id="gallerypagemidcol-2">
                 <div class="gallerypagemidcol-block-2">
                     <ul id="col-1">
                         <li><a href="#"><img src="../orris0/images/bda.jpg" width="70" height="103" alt="Ali" title="Ali"><img class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
@@ -311,7 +311,7 @@
                         <li><a href="#"><img src="../orris0/bda-8.jpg" width="70" height="103" alt="Cliffs" title="Cliffs"><img class="hid" src="../orris0/bda-8.jpg" alt=""></a></li>
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
-            </div><!--midcol closed-->
+            </div> --midcol closed-->
             <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding: 2%;">
                             <h2 class="dark">Welcome to MJ's Practical HTML5 Projects for Fun and Profit!</h2>
