--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" type="text/css" href="../orris0/CSS/css/inline-block.css">
-        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
+        <!-- <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> -->
 	
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="../orris0/CSS/HTML5-style-2.css" type="text/javascript" charset="utf-8"></script>
