--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <p>&copy; Kite-It.</p>
                         </footer>
                     </div>
-            </div>
+            <!-- end wrapper -->
             <div class="row">
 
                 <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
@@ -418,7 +418,7 @@
                 </div>
 
             </div>
-</div>
+
             <section id="unsubscribe" class="unsubscribe-form content-section text-center">
                 <div class="block text-center">
                     <div class="container">
@@ -503,10 +503,7 @@
             <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
                 <p>&copy; Kite-It.</p>
             </div>
-        </div> <!-- End Wrapper-->
-
-        </div>
-	
+        </div> <!-- End Wrapper-->	
 </body>
 
 </html>
