--- a/index.html
+++ b/index.html
@@ -174,24 +174,23 @@
                 <header class="data" id="gallerypageheader"><!-- <div id="hdr"> changed to <header> -->
                     <div class="data" id="html5style2banner">
                         <h1>StarTrackr!</h1>
-						<!--
-						<nav>
-                    <ul class="data" id="main-menu">
-                        <li><a href="about.html" title="">About Us</a></li>
-                        <li><a href="news.html" title="">News</a></li>
-                        <li><a href="events.html" title="">Events</a></li>
-                        <li><a href="volunteers.html" title="">Volunteers</a></li>
-                        <li><a href="services.html" title="">Services</a></li>
-                        <li><a href="membership.html" title="">Membership</a></li>
-                        <li><a href="index2.html" title="">Home</a></li>
-                    </ul>
-                </nav>
-					-->
                     </div>
                 </header>
 				<br class="clear">
             </div> <!-- end col-12 -->            
-        </div><!-- end row -->	
+        </div><!-- end row -->
+		
+		<nav id="style-2nav">
+            <ul class="data" id="main-menu">
+                <li><a href="about.html" title="">About Us</a></li>
+                <li><a href="news.html" title="">News</a></li>
+                <li><a href="events.html" title="">Events</a></li>
+                <li><a href="volunteers.html" title="">Volunteers</a></li>
+                <li><a href="services.html" title="">Services</a></li>
+                <li><a href="membership.html" title="">Membership</a></li>
+                <li><a href="index2.html" title="">Home</a></li>
+            </ul>
+        </nav>
 		
 		<div class="row">
             <div class="col-12">
