--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		
 		<div class="row">
             <div class="col-12">
-                <img src="img/kite.png";>
+                <img id="kite" src="img/kite.png";>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
 		<!--close top section - content area starts -->
