--- a/index.html
+++ b/index.html
@@ -14,17 +14,13 @@
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>
-        
         <!-- code.jquery.com/mobile--
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
-        
-        <!--
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
         only applies to resources that are declared after it. 
         -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
-
         <!-- Name of web application (only should be used if the website is used as an app) -->
         <meta name="application-name" content="Practical HTML5 projects">
         <!-- Theme Color for Chrome, Firefox OS and Opera -->
@@ -174,7 +170,7 @@
             </div> <!-- end col-12 -->            
         </div><!-- end row -->
 		
-		<nav class="data" id="style-2nav">
+		<nav class="data" id="html5style2nav1">
             <ul id="main-menu">
                 <li><a href="about.html" title="">About Us</a></li>
                 <li><a href="news.html" title="">News</a></li>
@@ -193,7 +189,7 @@
         </div> <!-- end row -->
 		<!--close top section - content area starts -->
 		<div class="data" id="html5style2content">
-            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+            <h2 id="html5style2-h2">Award winning accommodation, self catering or bed and breakfast</h2>
             <div class="data" id="html5style2leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
