--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </header>
 				    <br class="clear">
                 </div> <!-- end col-12 -->            
-            </div><!-- end row -->
+            </div><!-- end row --
 		
 		<nav class="data" id="html5style2nav1">
             <ul id="main-menu">
@@ -158,7 +158,7 @@
                 <li><a href="index2.html" title="">Home</a></li>
             </ul>
         </nav>
-		
+    -->
 		<div class="row">
             <div class="col-12">
                 <img id="kite" src="img/kite.png";>
