--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="wrapper">
             <div class="row">
                 <div class="col-12">
-                    <header class="data" id="gallerypageheader"><!-- <div id="hdr"> changed to <header> -->
+                    <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
                         <div class="data" id="html5style2banner">
                             <h1 id="html5style2-h1">StarTrackr!</h1>
                         </div>
