--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
                     </ul><br class="clear">
                 </div><!--gallery block closed-->
             </div><!--midcol closed-->
-                
+			<footer> 
+                 Footer goes here 
+            </footer>   
             <div class="row" style="background-color: #f6931e;">
                 <div class="col-11">
                     <h2>Get ready for take off</h2>
