--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
                 <img id="kite" src="img/kite.png";>
             </div> <!-- end col-12 -->
         </div> <!-- end row -->
+		<br class="clear">
+		<hr>
 		<!--close top section - content area starts -->
 		<div class="data" id="html5style2content">
             <h2 id="html5style2-h2">Award winning accommodation, self catering or bed and breakfast</h2>
@@ -197,11 +199,14 @@
             </div>
             <br class="clear">
         </div><!--content section closed-->
+		<br class="clear">
+		<hr>
         
 		<footer id="html5style2footer">
 
         </footer>
         <br class="clear">
+		<hr>
 		
 		<div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
             <div class="col-12">
@@ -209,6 +214,7 @@
             </div>
         </div>
         <br class="clear">
+		<hr>
         <header class="data" id="gallerypageheader">
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
