--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="rosette.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
         charset="utf-8">
 		
