--- a/index.html
+++ b/index.html
@@ -303,16 +303,22 @@
             </div><!--midcol closed-->
 			<footer> 
                  Footer goes here 
-            </footer>   
-            <div class="row" style="background-color: #f6931e;">
+            </footer> 
+			<div class="row" style="background-color: #f6931e;">
                 <div class="col-11">
-                    <h2>Get ready for take off</h2>
-                </div>
-                <div class="col-3">
-                    <img id="orange-globe" class="circle" src="images/orange-globe.png">
-                </div>
-            </div>
-            <!-- </div> -- END SHOWCASE -->
+                    <h2>Get ready for take off.</h2>                                             
+				</div><!-- end col-12 -->
+            </div> <!-- end class row -->
+	
+            <div class="row" style="background-color: #1abc9c;">
+                <div class="col-11">
+                    <div class="col-3">
+                        <img id="orange-globe" class="circle" src="images/orange-globe.png">
+                    </div> <!-- end col-3 -->
+                </div><!-- end col-11 -->
+            </div> <!-- end class row -->
+            
+            <!-- </div> -- END SHOWCASE --
             <div class="features">
                         <div class="row" style="background-color: #1abc9c;">
                             <div class="col-10">
@@ -322,7 +328,7 @@
                                 <img id="waves" class="circle" src="images/waves.png">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="item3">
                         <div class="row" style="background-color: #e5ef3f;">
