--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					
                     <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
                         <div class="data" id="html5style2banner">
-                            <h1 id="html5style2-h1">StarTrackr!</h1>
+                            <h1 id="html5style2h1">StarTrackr!</h1>
                         </div>
                     </header>
 					
@@ -166,7 +166,7 @@
 			
 		    <!--close top section - content area starts -->
 		    <div class="data" id="html5style2content">
-                <h2 id="html5style2-h2">Award winning accommodation, self catering or bed and breakfast</h2>
+                <h2 id="html5style2h2">Award winning accommodation, self catering or bed and breakfast</h2>
                 <div class="data" id="html5style2leftcol">
                     <h3>Cottages, converted barns, caravans</h3>
                     <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
