--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
-    <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
-	<link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen"
-        charset="utf-8">
-		
+        <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
+	    <link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
+        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- Jquery -->
 		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
@@ -148,9 +146,9 @@
                 <div class="col-12">
 					
                     <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
-                        <div class="data" id="html5style2banner">
+                        <!-- <div class="data" id="html5style2banner"> -->
                             <h1 id="html5style2h1">StarTrackr!</h1>
-                        </div>
+                       <!-- </div> -->
                     </header>
 					
 				    <br class="clear">
