--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css">
         <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
 	    <link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
         <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
