--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
-        <link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
         <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
-	    <link rel="stylesheet" type="text/css" href="./CSS/rosette.css">
+	    
         <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- Jquery -->
-		<link rel="stylesheet" type="text/css" href="../orris0/CSS/HTML5-style-2.css" media="screen" charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
         <!-- code.jquery.com/mobile--
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         Allows control over where resources are loaded from.
