--- a/index2.html
+++ b/index2.html
@@ -39,8 +39,7 @@
     <meta property="og:audio:type" content="audio/mpeg" />
 
     <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
-    <meta property="og:description"
-        content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
+    <meta property="og:description" content="Sean Connery found fame and fortune as the suave, sophisticated British agent, James Bond." />
     <meta property="og:determiner" content="the" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:locale:alternate" content="fr_FR" />
