--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Jquery -->
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="scripts.js"></script>
+        <script type="text/javascript" src="./scripts.js"></script>
         <!-- code.jquery.com/mobile--
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         Allows control over where resources are loaded from.
