--- a/index.html
+++ b/index.html
@@ -155,12 +155,14 @@
 				<!-- end col-12 -->            
             </div> 
 			<!-- end row -->
-			
+			<div class="data" id="html5style2content">
 		    <div class="row">
                 <div class="col-12">
                     <img id="kite" src="img/kite.png";>
 					<!--close top section - content area starts -->
-		            <div class="data" id="html5style2content">
+				</div> <!-- end col-12 -->
+            </div> <!-- end row -->
+		            <!-- <div class="data" id="html5style2content"> -->
                         <h2 id="html5style2h2">Award winning accommodation, self catering or bed and breakfast</h2>
                         <div class="data" id="html5style2leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
