--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
         <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
 	    
-        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- Jquery -->
+     <!--   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+		 Jquery -->
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css" media="screen" charset="utf-8">
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>
