--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
      <!--   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
 		 Jquery -->
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css" media="screen" charset="utf-8">
+		<script type="text/javascript" src="js/jquery-1.7.js"></script>
+        <script type="text/javascript" src="../orris0/js/script.js"></script>
+		<!--
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>
-        <!-- code.jquery.com/mobile--
+        -- code.jquery.com/mobile--
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
@@ -505,6 +508,10 @@
                 <p>&copy; Kite-It.</p>
             </div>
     </div> <!-- End Wrapper-->	
+
+	<script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="../orris0/js/script.js"></script>
+		
 	<script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
                 <script type="text/javascript" src="./scripts.js"></script>
 								
