--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 	<script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
 		
-	<script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<!-- <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
                 <script type="text/javascript" src="./scripts.js"></script>
 								
                 <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript"></script>
