--- a/index.html
+++ b/index.html
@@ -528,14 +528,14 @@
                 <script src="../orris0/swiper-bundle.min.js"></script>
                 <script src="../orris0/validate.js"></script>
                 <!--jQuery JS-->
-                <script src="../orris0/js/script.js"></script>
+                <script type="text/javascript" src="js/jquery-1.7.js"></script>
+                <script type="text/javascript" src="../orris0/js/script.js"></script>
                 <!-- Template Main JS File -->
                 <script src="../orris0/main.js"></script>
                 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript” src=”assets/js/ui.js"></script>
-        <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script>
+        
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         
