--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
 		        <div class="row">
                     <div class="col-12">
                         <img id="kite" src="img/kite.png";>
-						<div id="container">
+						<!-- <div id="container">
     <div id="header">
       <h1>StarTrackr!</h1>
     </div>
     <div id="content">
       <h2>
         Welcome!
-      </h2>
+      </h2> -->
       <div id="navigation">
         <ul>
           <li><a href="#">Home</a></li>
