--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css">
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
+        <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
         
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 	    
