--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 	    
      <!--   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
-		 Jquery -->
+		 Jquery --
 		<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css" media="screen" charset="utf-8">
-		<!-- <script type="text/javascript" src="js/jquery-1.7.js"></script> -->
+		<!-- <script type="text/javascript" src="js/jquery-1.7.js"></script> --
         <script type="text/javascript" src="../orris0/js/script.js"></script>
 		<!--
         <script src="jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
