--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<!--Allows control over where resources are loaded from.
         Place as early in the <head> as possible, as the tag  
         only applies to resources that are declared after it. 
-        -->
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
+        --
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css"> -->
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="script.js"></script>
         <!--
