--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
-        <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
+        <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css">
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css">
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
