--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Optional Metadata -->
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css"> --
-		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css"> -->
+		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css"> --
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
        
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
