--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+		<link rel="stylesheet" href="./CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<!-- Optional Metadata -->
