--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<link rel="stylesheet" href="./CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
-		<!-- Optional Metadata -->
-        <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> --
+		<!-- Optional Metadata --
+        <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/HTML5-style-2.css"> --
 		<link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/flexboxgrid.css"> --
         <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css">
