--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+		<link href="./CSS/HTML5style2.css" rel="stylesheet">
 		<link rel="stylesheet" href="./CSS/HTML5style2.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 		<!-- Core theme CSS (includes Bootstrap)-->
